added test page to mess with features and learn the framework

--- a/kitchen-sink-material/home.html
+++ b/kitchen-sink-material/home.html
@@ -11,6 +11,14 @@
     <div class="content-block-title">Framework7 Kitchen Sink</div>
     <div class="list-block">
       <ul>
+		<li><a href="test-page-1.html" class="item-link">
+			<div class="item-content">
+			  <div class="item-media"><i class="icon icon-f7"></i></div>
+			  <div class="item-inner">
+				<div class="item-title">Test Page 1</div>
+			  </div>
+			</div></a>
+		</li>
         <li><a href="accordion.html" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
@@ -141,7 +149,8 @@
               <div class="item-inner">
                 <div class="item-title">Notifications</div>
               </div>
-            </div></a></li>
+            </div></a>
+		</li>
         <li><a href="photo-browser.html" class="item-link">
             <div class="item-content">
               <div class="item-media"><i class="icon icon-f7"></i></div>
