trying out image input and separating angular controllers. Its a work in progress

--- a/kitchen-sink-material/index.html
+++ b/kitchen-sink-material/index.html
@@ -184,6 +184,7 @@
     <script type="text/javascript" src="../bower_components/angular/angular.min.js"></script>
     <script type="text/javascript" src="../build/js/framework7.js"></script>
     <script type="text/javascript" src="js/framework7.angular.hook.js"></script>
+	<script type="text/javascript" src="js/TestCtrl.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
   </body>
 </html>
